--- a/main.tex
+++ b/main.tex
@@ -11,8 +11,8 @@
 \newcommand{\Programme}{Open Informatics}
 \newcommand{\Field}{Artificial Intelligence and Computer Science}
 \newcommand{\Title}{From FastText to Transformer \\[0.05em]Models, and their Application in \\[0.2em]Retrieval-Augmented Generation}
-\newcommand{\Keywords}{\ac{NLP}, Word Embedding, Transformers, FastText, \ac{RAG}, \ac{QA}, \ac{STS}}
-\newcommand{\KlicovaSlova}{Zpracování přirozeného jazyka, Word Embedding, Transformátory, FastText, \ac{RAG}, \ac{QA}, Sémantická Podobnost Textu}
+\newcommand{\Keywords}{\ac{NLP}, Word Embedding, Transformer, FastText, \ac{RAG}, \ac{QA}, \ac{STS}}
+\newcommand{\KlicovaSlova}{Zpracování přirozeného jazyka, Word Embedding, Transformátor, FastText, \ac{RAG}, \ac{QA}, Sémantická Podobnost Textu}
 \newcommand{\Year}{2024}
 \newcommand{\Month}{May}
 \newcommand{\Date}{\Month~\Year}
