--- a/main.bib
+++ b/main.bib
@@ -94,12 +94,12 @@
 
 % Distillation / DistilBERT
 @misc{sanh2020distilbert,
-      title={DistilBERT, a distilled version of BERT: smaller, faster, cheaper and lighter}, 
-      author={Victor Sanh and Lysandre Debut and Julien Chaumond and Thomas Wolf},
-      year={2020},
-      eprint={1910.01108},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL}
+  title         = {DistilBERT, a distilled version of BERT: smaller, faster, cheaper and lighter},
+  author        = {Victor Sanh and Lysandre Debut and Julien Chaumond and Thomas Wolf},
+  year          = {2020},
+  eprint        = {1910.01108},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL}
 }
 
 % mE5
@@ -303,22 +303,22 @@
 
 % Rotary Position Embedding
 @misc{su2023roformer,
-      title={RoFormer: Enhanced Transformer with Rotary Position Embedding}, 
-      author={Jianlin Su and Yu Lu and Shengfeng Pan and Ahmed Murtadha and Bo Wen and Yunfeng Liu},
-      year={2023},
-      eprint={2104.09864},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL}
+  title         = {RoFormer: Enhanced Transformer with Rotary Position Embedding},
+  author        = {Jianlin Su and Yu Lu and Shengfeng Pan and Ahmed Murtadha and Bo Wen and Yunfeng Liu},
+  year          = {2023},
+  eprint        = {2104.09864},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL}
 }
 
 % SwiGLU
 @misc{shazeer2020glu,
-      title={GLU Variants Improve Transformer}, 
-      author={Noam Shazeer},
-      year={2020},
-      eprint={2002.05202},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG}
+  title         = {GLU Variants Improve Transformer},
+  author        = {Noam Shazeer},
+  year          = {2020},
+  eprint        = {2002.05202},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG}
 }
 
 % Matryoshka Representation Learning
@@ -360,12 +360,12 @@
 
 % ESE: Espresso Sentence Embeddings
 @misc{li2024ese,
-      title={ESE: Espresso Sentence Embeddings}, 
-      author={Xianming Li and Zongxi Li and Jing Li and Haoran Xie and Qing Li},
-      year={2024},
-      eprint={2402.14776},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL}
+  title         = {ESE: Espresso Sentence Embeddings},
+  author        = {Xianming Li and Zongxi Li and Jing Li and Haoran Xie and Qing Li},
+  year          = {2024},
+  eprint        = {2402.14776},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL}
 }
 
 % SetFit
@@ -422,11 +422,11 @@
 
 % GPT-3.5-turbo 
 @misc{openai2023gpt35turbo,
-  author = {OpenAI},
-  title = {GPT-3.5-turbo},
-  year = {2023},
+  author       = {OpenAI},
+  title        = {GPT-3.5-turbo},
+  year         = {2023},
   howpublished = {\url{https://platform.openai.com/docs/models/gpt-3-5}},
-  note = {Accessed: 2024-05-24}
+  note         = {Accessed: 2024-05-24}
 }
 
 
