change GPT-3.5-turbo citation to the footnote

--- a/src/methodology.tex
+++ b/src/methodology.tex
@@ -403,7 +403,7 @@ The test set comprises two components: a technical manual and a set of 200 quest
 
 For the embedding generation stage within \ac{RAG}, we will leverage the GTE\textsubscript{Small} model as a popular small model with a good \ac{MTEB} rating.
 
-For the \ac{LLM} component of \ac{RAG}, we will utilize GPT-3.5-turbo \cite{openai2023gpt35turbo}.
+For the \ac{LLM} component of \ac{RAG}, we will utilize GPT-3.5-turbo\footnote{Information about GPT-3.5-turbo on OpenAI website: \url{https://platform.openai.com/docs/models/gpt-3-5}.}.
 The quality of the answers will be controlled and verified using GPT-4o\footnote{Information about GPT-4o on OpenAI website: \url{https://openai.com/index/hello-gpt-4o/}.}.
 
 
