--- a/src/discussion.tex
+++ b/src/discussion.tex
@@ -28,10 +28,10 @@ The optimal chunk size can vary between languages due to differences in average 
 Therefore, a valuable future research direction involves creating a new dataset focused on technical \ac{QA} in Czech.
 Testing different chunk sizes within this new dataset would be crucial for identifying the optimal configuration for Czech technical \ac{QA} tasks.
 
-The study employs the K parameter within the \ac{RAG} evaluation process.
-The initial K values were chosen proportionally to the chunk size, mirroring the default settings within the evaluation tool.
-However, to optimize performance for the \ac{QA} task, further investigation into the impact of varying K values is recommended.
-Evaluating a broader range of K values alongside the varying chunk sizes could lead to the identification of the optimal configuration for maximizing \ac{RAG}'s performance in the context of this specific English technical document retrieval task.
+The study employs the $K$ parameter within the \ac{RAG} evaluation process.
+The initial $K$ values were chosen proportionally to the chunk size, mirroring the default settings within the evaluation tool.
+However, to optimize performance for the \ac{QA} task, further investigation into the impact of varying $K$ values is recommended.
+Evaluating a broader range of $K$ values alongside the varying chunk sizes could lead to the identification of the optimal configuration for maximizing \ac{RAG}'s performance in the context of this specific English technical document retrieval task.
 This optimal configuration could then be compared to performance on the newly created Czech \ac{QA} dataset.
 
 
