ack Tommaso Gargiani and NLP-CIIRC team

--- a/src/acknowledgments.tex
+++ b/src/acknowledgments.tex
@@ -5,9 +5,12 @@
 I would like to express my sincere gratitude to my supervisor, Ing. Jan Šedivý, CSc., for his invaluable advice and unwavering support throughout the past year.
 His guidance and expertise were instrumental in the completion of this research.
 
-I would like to express my sincere gratitude to my colleague, Bc. Adam Jirkovský, for his invaluable contributions to this research project.
+I am also deeply grateful to my colleague, Bc. Adam Jirkovský, for his invaluable contributions to this research project.
 Adam's expertise in the field and the code he developed were instrumental in facilitating the completion of this work.
 His guidance regarding the CIIRC cluster and assistance with the OpenAI API were also immensely helpful.
+
+I would like to thank Tommaso Gargiani for providing the essential training data for this research.
+Additionally, I am grateful to the NLP-CIIRC team for their insightful advice during the weekly meetings, which greatly contributed to the progress of this work.
 
 Furthermore, I extend my heartfelt thanks to my family: Ina Zviazdova, Viachaslau Zviazdou, Maryia Zviazdova, Natallia Pankova, Inessa Davtyan.
 Their unwavering moral and financial support, along with their constant encouragement, were a source of strength throughout my academic journey.
