fix using Grammarly

--- a/src/acknowledgments.tex
+++ b/src/acknowledgments.tex
@@ -12,7 +12,7 @@ His guidance regarding the CIIRC cluster and assistance with the OpenAI API were
 I would like to thank Tommaso Gargiani for providing the essential training data for this research.
 Additionally, I am grateful to the NLP-CIIRC team for their insightful advice during the weekly meetings, which greatly contributed to the progress of this work.
 
-Furthermore, I extend my heartfelt thanks to my family: Ina Zviazdova, Viachaslau Zviazdou, Maryia Zviazdova, Natallia Pankova, Inessa Davtyan.
+Furthermore, I extend my heartfelt thanks to my family: Ina Zviazdova, Viachaslau Zviazdou, Maryia Zviazdova, Natallia Pankova, and Inessa Davtyan.
 Their unwavering moral and financial support, along with their constant encouragement, were a source of strength throughout my academic journey.
 
 Finally, I would like to thank my friends, Vsevolod Tiemnohorov, Viachaslau Radzeuski, and Stsiapan Belaushka, for their unwavering support during this challenging yet rewarding experience.
