--- a/src/tables/RAG_time.tex
+++ b/src/tables/RAG_time.tex
@@ -12,7 +12,7 @@
       \bottomrule
     \end{tabular}
     \caption{Time required for \ac{RAG} to generate document part embeddings at various chunk sizes.
-    Where $S_{chunk}$ represents size of the chunk in characters and $t_n$ is time of $n_{th}$ experiment.}
+    Where $S_{chunk}$ represents the size of the chunk in characters and $t_n$ is a time of $n_{th}$ experiment.}
     \label{tab:RAG_time}
   \end{table*}
   
