add afterpage package

--- a/src/document_setup.tex
+++ b/src/document_setup.tex
@@ -59,6 +59,7 @@
 \usepackage{placeins}
 \usepackage{caption}
 \usepackage{chngcntr}
+\usepackage{afterpage}
 
 % print version has different margins to accommodate the spine of the book
 % do not move this around, or it stops working
