Add date, add name

--- a/src/declaration.tex
+++ b/src/declaration.tex
@@ -9,7 +9,7 @@ I acknowledge the use of AI tools for rephrasing and grammatical correction.
 \vspace{1.5cm}
 ~\\
 
-Date .............................\hfill{}...............................................
+In Prague 24.05.2024              \hfill{}                               Yauheni Zviazdou
 
 \hfill{}~~~~~~~~~~~~~~~
 
